# amygdala

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/amygdala/: __init__.py  __main__.py  constants.py  exceptions.py  logging.py
src/amygdala/adapters/: base.py  registry.py
src/amygdala/adapters/claude_code/: adapter.py  hooks.py  mcp_server.py
src/amygdala/adapters/claude_code/templates/: post_tool_use.sh.j2  session_start.sh.j2
src/amygdala/cli/: app.py  console.py  formatting.py
src/amygdala/cli/commands/: capture.py  clean.py  config.py  diff.py  init.py  install.py  serve.py  status.py  uninstall.py
src/amygdala/core/: capture.py  dirty_tracker.py  engine.py  hasher.py  index.py  resolver.py
src/amygdala/git/: diff_parser.py  operations.py
src/amygdala/models/: config.py  enums.py  index.py  memory.py  provider.py
src/amygdala/profiles/: builtins.py  models.py  registry.py
src/amygdala/prompts/: high.py  medium.py  simple.py  templates.py
src/amygdala/providers/: anthropic.py  base.py  gemini.py  ollama.py  openai.py  registry.py
src/amygdala/storage/: layout.py  memory_store.py
tests/: conftest.py
tests/integration/: test_capture_pipeline.py  test_cli.py  test_git_integration.py
tests/unit/: test_capture.py  test_config_cmd.py  test_diff_parser.py  test_dirty_tracker.py  test_engine.py  test_exceptions.py  test_git_operations.py  test_hasher.py  test_index.py  test_memory_store.py  test_models.py  test_profiles.py  test_prompts.py  test_resolver.py
tests/unit/adapters/: test_claude_code_adapter.py  test_hooks.py  test_mcp_server.py
tests/unit/providers/: test_anthropic.py  test_gemini.py  test_ollama.py  test_openai.py  test_registry.py
